--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
 <title>Page Title</title>
 </head>
-<body>
-  <h1>This is a heading</h1>
-  <p>First paragraph.</p>
-  <p>This is a paragraph.</p>
-  <p>This is another paragraph.</p>
+<body> 
+  <p>first paragraph.</p>
 </body>
 </html>
